@@ -1,3 +1,8 @@
+2008-11-28  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/gstplay.c,
+	src/betaradio.c: Polish icon flash timing.
+
 2008-11-27  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* src/gstplay.c,
